--- a/package.json
+++ b/package.json
@@ -1,24 +1,62 @@
 {
   "name": "auth-bug",
   "version": "0.1.0",
+  "engines": {
+    "node": "21.3.0",
+    "npm": "10.4.0"
+  },
   "private": true,
+  "prisma": {
+    "seedDummy": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seedDummy.ts"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mytest": "node ./scripts/mytest.ts"
+  },
+  "overrides": {
+    "cacheable-request": {
+      "keyv": "npm:@keyvhq/core@~1.6.6"
+    }
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.9",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/joy": "^5.0.0-beta.16",
+    "@prisma/client": "^5.6.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "memoize-one": "^6.0.0",
+    "next": "14.1",
+    "next-auth": "5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-redux": "^9.0.2",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.10",
+    "server-only": "^0.0.1",
+    "use-immer": "^0.9.0",
+    "xero-node": "^5.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.0.3",
+    "prisma": "^5.6.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5"
   }
 }
