--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     }
   },
   "dependencies": {
-    "@auth/core": "0.18.4",
-    "@auth/prisma-adapter": "1.0.9",
+    "@auth/core": "^0.18.4",
+    "@auth/prisma-adapter": "^1.0.9",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
@@ -37,7 +37,7 @@
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
     "next": "14.1",
-    "next-auth": "5.0.0-beta.4",
+    "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.2",
